Mention email support in Readme and docs

--- a/docs/manual.dox
+++ b/docs/manual.dox
@@ -8,6 +8,7 @@ The following pages provide an introduction to NAWA app development and explain 
 - Sessions: How to use the comfortable NAWA session system to identify your users.
 - Environment: How to use environment parameters, GET and POST data, and cookies.
 - Filters: Equip your app with static filters, e.g., to comfortably deliver static files (images, stylesheets, ...).
+- Email: How to send emails through SMTP within your NAWA app.
 - And soon even more!
 
 */
