--- a/docs/manual.dox
+++ b/docs/manual.dox
@@ -9,7 +9,7 @@ The following pages provide an introduction to NAWA app development and explain 
 - \subpage sessionsmanual : How to use the comfortable NAWA session system to identify your users.
 - \subpage environmentmanual : How to use environment parameters, GET and POST data, cookies, and HTTP headers.
 - \subpage filtersmanual : Equip your app with static filters, e.g., to comfortably deliver static files
-(images, stylesheets, ...).
+(images, stylesheets, ...), and learn how to send files to the user.
 - \subpage emailmanual : How to send emails through SMTP within your NAWA app.
 - Logging: Coming soon.
 - Encoding and Crypto: Coming soon.
