--- a/docs/manual.dox
+++ b/docs/manual.dox
@@ -1,6 +1,6 @@
 /*!
 
-\page manual NAWA Manual
+\page manual Manual/Tutorials
 
 The following pages provide an introduction to NAWA app development and explain the use of its features.
 
